test/invalid/baseline/callback-noassign.txt
Syntax error at line 1, since `callback MyCallback`:
callback MyCallback;
                   ^ Callback lacks an assignment
